test/org/midica/testfiles/failing/pattern-def-without-name.midica
INCLUDE inc/instruments.midica

PATTERN
	0 /4
END


